[tool.poetry]
name = "web-api-tools"
version = "0.1.0"
description = ""
authors = ["Teruki Goto <teruki.gotoh@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.1"
uvicorn = {extras = ["standard"], version = "^0.24.0.post1"}
sqlalchemy = "^2.0.23"
pymysql = "^1.1.0"
aiomysql = "^0.2.0"
python-dotenv = "^1.0.0"
setuptools = "^69.0.2"
alembic = "^1.13.0"
python-decouple = "^3.8"
asyncmy = "^0.2.9"
pathlib = "^1.0.1"


[tool.poetry.group.dev.dependencies]
pytest-asyncio = "^0.21.1"
aiosqlite = "^0.19.0"
httpx = "^0.25.2"
flake8 = "^6.1.0"
black = "^23.11.0"
isort = "^5.12.0"
pytest = "^7.4.3"
pytest-cov = "^4.1.0"
mypy = "^1.7.1"
nox = "^2023.4.22"
pre-commit = "^3.5.0"

[tool.isort]
profile = "black"
line_length = 79
skip_glob = [
    "**/.eggs/**",
    "**/.git/**",
    "**/.hg/**",
    "**/.mypy_cache/**",
    "**/.tox/**",
    "**/.nox/**",
    "**/.venv/**",
    "**/_build/**",
    "**/buck-out/**",
    "**/build/**",
    "**/dist/**",
    "**/.dockervenv/**",
    "**/.pytest_cache/**"
]

[tool.black]
line-length = 79
target-version = ['py311']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.nox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | \.dockervenv
  | \.pytest_cache
)/
'''

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
